--- a/regist_system/templates/idm_input.html
+++ b/regist_system/templates/idm_input.html
@@ -8,6 +8,7 @@
     <form method="post" action="/idm_input">
         <input type="hidden" name="username" value="{{ username }}">
         <input type="hidden" name="number" value="{{ number }}">
+        <input type="hidden" name="password" value="{{ password }}">
         <input type="submit" value="学生証読み取り">
     </form>
 </body>
