--- a/regist_system/templates/users.html
+++ b/regist_system/templates/users.html
@@ -7,7 +7,7 @@
     <h1>ユーザー一覧</h1>
     <ul>
         {% for user in users %}
-            <li>{{ user.username }} 学生番号:({{ user.number }}) 学生証:({{ user.idm_univ }}) 定期券({{ user.idm_bus }})</li>
+            <li>{{ user.username }} 学生番号:({{ user.number }}) パス:({{ user.password }}) 学生証:({{ user.idm_univ }}) 定期券({{ user.idm_bus }})</li>
         {% endfor %}
     </ul>
 
@@ -15,6 +15,7 @@
     <form method="post" action="/add">
         <input type="text" name="username" placeholder="Username" required>
         <input type="text" name="number" placeholder="Number" required>
+        <input type="text" name="password" placeholder="Password" required>
         <input type="submit" value="カードの登録に進む">
     </form>
 
