ログインしすてむ更新

--- a/yoyaku_system/templates/personal.html
+++ b/yoyaku_system/templates/personal.html
@@ -51,7 +51,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>ようこそ〇〇さん</h1>
+            <h1>ようこそ{{ username }}さん</h1>
         </header>
         <section>
             <h3>全体予約状況</h3>
