--- a/yoyaku_system/templates/top.html
+++ b/yoyaku_system/templates/top.html
@@ -56,7 +56,7 @@
 <body>
     <div class="container">
         <h1>Sojo Bus</h1>
-        <form method="post" >
+        <form method="post" action="/login">
             <label for="username">ユーザーID</label>
             <input type="text" id="username" name="username" placeholder="ユーザーIDを入力してください" required>
 
