--- a/regist_system/templates/idm_input_bus.html
+++ b/regist_system/templates/idm_input_bus.html
@@ -6,9 +6,7 @@
 <body>
     <h1>定期券読み取り</h1>
     <form method="post" action="/idm_input_bus">
-        <input type="hidden" name="username" value="{{ username }}">
-        <input type="hidden" name="number" value="{{ number }}">
-        <input type="hidden" name="password" value="{{ password }}">
+        <input type="hidden" name="student_id" value="{{ student_id }}">
         <input type="hidden" name="idm_univ" value="{{ idm_univ }}">
         <input type="submit" value="定期券読み取り">
     </form>
