--- a/regist_system/templates/users.html
+++ b/regist_system/templates/users.html
@@ -7,15 +7,12 @@
     <h1>ユーザー一覧</h1>
     <ul>
         {% for user in users %}
-            <li>{{ user.username }} 学生番号:({{ user.number }}) パス:({{ user.password }}) 学生証:({{ user.idm_univ }}) 定期券({{ user.idm_bus }})</li>
+        <li>学籍番号：{{user.student_id}} 学生証idm：{{user.idm_univ}} バスidm：{{user.idm_bus}}
         {% endfor %}
     </ul>
 
     <h2>ユーザー追加</h2>
     <form method="post" action="/add">
-        <input type="text" name="username" placeholder="Username" required>
-        <input type="text" name="number" placeholder="Number" required>
-        <input type="text" name="password" placeholder="Password" required>
         <input type="submit" value="カードの登録に進む">
     </form>
 
@@ -23,7 +20,7 @@
     <form method="post" action="/delete">
         <select name="user_id">
             {% for user in users %}
-                <option value="{{ user.id }}">{{ user.username }}</option>
+                <option value="{{ user.id }}">{{ user.student_id }}</option>
             {% endfor %}
         </select>
         <input type="submit" value="ユーザーを消去する">
