ファイル位置調整

--- a/regist_system/templates/idm_input.html
+++ b/regist_system/templates/idm_input.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <title>Get Idm</title>
-</head>
-<body>
-    <h1>学生証読み取り</h1>
-    <form method="post" action="/idm_input">
-        <input type="submit" value="学生証読み取り">
-    </form>
-</body>
+    <head>
+        <title>get idm</title>
+    </head>
+    <body>
+        <h1>学生証読み取り</h1>
+        <form method="post" action="/idm_input">
+            <input type="submit" value="学生証読み取り">
+        </form>
+    </body>
 </html>
