--- a/yoyaku_system/templates/personal.html
+++ b/yoyaku_system/templates/personal.html
@@ -53,6 +53,7 @@
         <header>
             <h1>ようこそ{{ username }}さん</h1>
         </header>
+        <img src="./test.png">
         <section>
             <h3>全体予約状況</h3>
             <ul>
