--- a/regist_system/templates/7_complete.html
+++ b/regist_system/templates/7_complete.html
@@ -84,12 +84,14 @@
         </div>
     </header>
 
-    <h1>登録が完了しました</h1>
+    <h1>{{student_id}}さんの登録が完了しました</h1>
 
     <div class="container">
-        <a href="2_menu.html"><button type="submit" class="btn">メニューに戻る</button></a>
+      <form action="/" method="post">
+        <button type="submit" class="btn">メニューに戻る</button>
+      </form>
     </div>
-    
+
 
     <footer class="footer">
         <div class="footer-container">
