--- a/regist_system/templates/2_menu.html
+++ b/regist_system/templates/2_menu.html
@@ -84,12 +84,11 @@
     </header>
 
     <h1>メニュー</h1>
-
-    <div class="container">
-        <button type="submit" class="btn" action="/add">利用者登録</button></a>
-        <a href="1_login.html"><button type="submit" class="btn">ログアウト</button> </a>
-    </div>
-
+    <form method="post" action="/scan">
+      <div class="container">
+        <button type="submit" class="btn">利用者登録</button>
+      </div>
+    </form>
 
     <footer class="footer">
         <div class="footer-container">
