--- a/regist_system/templates/3_scan.html
+++ b/regist_system/templates/3_scan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>学生証スキャン</title>
+    <title>スキャンに進む</title>
 
     <style>
         .header{
@@ -27,6 +27,12 @@
 
         h1{
             font-size: 60px;
+            text-align: center;
+        }
+
+        h2{
+            color: red;
+            font-size: 40px;
             text-align: center;
         }
 
@@ -77,26 +83,30 @@
     </style>
 </head>
 
-<body>
+  <body>
     <header class="header">
-        <div class="header-container">
-            <a>Sojo Bus</a>
-        </div>
+      <div class="header-container">
+        <a>Sojo Bus</a>
+      </div>
     </header>
 
-    <h1>登録者の学生証を<br>スキャンしてください</h1>
-
+    <h1>定期券と学生証を準備してください</h1>
+    <h2>※定期券の有効期限を確認</h2>
     <div class="container">
-        <a href="7_complete.html"><button type="submit" class="btn">スキャン</button></a>
-        <a href="5_release.html"><button type="submit" class="btn">戻る</button></a>
+      <form method="post" action="/teiki_scan">
+        <button type="submit" class="btn">登録に進む</button>
+      </form>
+      <form method="post" action="/">
+        <button type="submit" class="btn">戻る</button>
+      </form>
     </div>
-    
+
 
     <footer class="footer">
-        <div class="footer-container">
-            <div id="line"></div>
-        </div>
+      <div class="footer-container">
+        <div id="line"></div>
+      </div>
     </footer>
-</body>
+  </body>
 
 </html>
