--- a/regist_system/templates/2_menu.html
+++ b/regist_system/templates/2_menu.html
@@ -84,7 +84,7 @@
     </header>
 
     <h1>メニュー</h1>
-    <form action="/scan">
+    <form method="get" action="/scan">
       <div class="container">
         <button type="submit" class="btn">利用者登録</button>
       </div>
