フロントのページと登録システムの組み込み完了(ログインは保留)．重複データを検出した場合エラーページに飛ぶ機能を追加．

--- a/regist_system/templates/4_teiki_scan.html
+++ b/regist_system/templates/4_teiki_scan.html
@@ -87,10 +87,10 @@
     <h1>定期券を<br>スキャンしてください</h1>
 
     <div class="container">
-      <form action="/idm_input_bus" method="post">
+      <form method="post" action="/input_idm_bus">
         <button type="submit" class="btn">スキャン</button>
       </form>
-      <form action="/add" method="post">
+      <form method="GET" action="/add">
         <button type="submit" class="btn">戻る</button>
       </form>
     </div>
