--- a/regist_system/templates/5_release.html
+++ b/regist_system/templates/5_release.html
@@ -94,7 +94,7 @@
     <h2>※定期券を離してください</h1>
 
     <div class="container">
-      <form action="/input_idm_student" method="post">
+      <form action="/release" method="post">
         <input type="hidden" name="idm_bus" value="{{ idm_bus }}">
         <button type="submit" class="btn">学生証のスキャンへ</button>
       </form>
