--- a/regist_system/templates/7_complete.html
+++ b/regist_system/templates/7_complete.html
@@ -84,10 +84,10 @@
         </div>
     </header>
 
-    <h1>{{student_id}}さんの登録が完了しました</h1>
+    <h1>情{{student_id}}さんの登録が完了しました</h1>
 
     <div class="container">
-      <form action="/" method="post">
+      <form action="/" method="get">
         <button type="submit" class="btn">メニューに戻る</button>
       </form>
     </div>
