ブラウザの戻るボタンが押された時に個人ページからやり直すように

--- a/yoyaku_system/templates/bnum.html
+++ b/yoyaku_system/templates/bnum.html
@@ -68,6 +68,10 @@
       document.querySelector('input[name = "seat_number"]').value = seatnumber;
     }
   </Script>
+    <!-- 戻るボタンが押された時個人ページに -->
+      window.addEventListener('popstate', function(e) {
+        location.href = '/';
+      }, false);
 
   <form action = "/choice/{{bnum}}/reserve" method="post">
     <input type="hidden" name="seat_number">
