--- a/yoyaku_system/templates/index.html
+++ b/yoyaku_system/templates/index.html
@@ -134,6 +134,11 @@
             alert("席を選択してください。");
         }
     }
+
+    <!-- 戻るボタンが押された時個人ページに -->
+      window.addEventListener('popstate', function(e) {
+        location.href = '/';
+      }, false);
 </script>
 
 </body>
