ブラウザバックされた時に/ルートに飛ぶ機能追加

--- a/regist_system/templates/6_studentcard_scan.html
+++ b/regist_system/templates/6_studentcard_scan.html
@@ -103,5 +103,13 @@
         </div>
     </footer>
 </body>
+<!-- ブラウザバックされたら/ルートに飛ばす -->
+<script>
+    window.onpageshow = function(event) {
+      if (event.persisted) {
+        window.location.href = "/";
+      }
+    };
+</script>
 
 </html>
