--- a/yoyaku_system/templates/bnum.html
+++ b/yoyaku_system/templates/bnum.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
     /* グリッドのスタイル */
     .grid-container {
       display: flex;
@@ -40,24 +40,24 @@
         width: 100%; /* 画面が狭い場合、列を1つにする */
       }
     }
-  </style>
-  <script>
+    </style>
+    <script>
     history.pushState('/choice');
-  </script>
-</head>
-<body>
-  <!-- グリッドの親要素 -->
-  <div class="grid-container">
-    {% for seat in seat_date %}
+    </script>
+  </head>
+  <body>
+    <!-- グリッドの親要素 -->
+    <div class="grid-container">
+      {% for seat in seat_date %}
       {% if reservedtf[seat.number - 1] == '1' %}
-        <div class="reserved" onclick="changeColor(this); updateForm('{{seat.number}}')">{{seat.number}}</div>
+      <div class="reserved" onclick="changeColor(this); updateForm('{{seat.number}}')">{{seat.number}}</div>
       {% elif reservedtf[seat.number - 1] == '0' %}
-        <div class="grid-item" onclick="changeColor(this); updateForm('{{seat.number}}')">{{seat.number}}</div>
+      <div class="grid-item" onclick="changeColor(this); updateForm('{{seat.number}}')">{{seat.number}}</div>
       {% endif %}
-    {% endfor %}
-  </div>
+      {% endfor %}
+    </div>
 
-  <script>
+    <script>
     // 色を変更する関数
     function changeColor(element) {
       // クリックされた要素にclickedクラスを追加
@@ -67,13 +67,19 @@
     function updateForm(seatnumber) {
       document.querySelector('input[name = "seat_number"]').value = seatnumber;
     }
-  </Script>
+      <!-- ブラウザバックされたら/ルートに飛ばす -->
+    window.onpageshow = function(event) {
+      if (event.persisted) {
+        window.location.href = "/";
+      }
+    };
+    </script>
 
-  <form action = "/choice/{{bnum}}/reserve" method="post">
-    <input type="hidden" name="seat_number">
-    <br>
-    <input type="submit" value="Reserve">
-  </form>
+    <form action = "/choice/{{bnum}}/reserve" method="post">
+      <input type="hidden" name="seat_number">
+      <br>
+      <input type="submit" value="Reserve">
+    </form>
 
-</body>
+  </body>
 </html>
