--- a/regist_system/templates/4_teiki_scan.html
+++ b/regist_system/templates/4_teiki_scan.html
@@ -103,4 +103,13 @@
     </footer>
 </body>
 
+<!-- ブラウザバックされたら/ルートに飛ばす -->
+<script>
+    window.onpageshow = function(event) {
+      if (event.persisted) {
+        window.location.href = "/";
+      }
+    };
+</script>
+
 </html>
